snapshot-tests/tests/snapshots/parser__eof.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[UnexpectedEof]: unexpected eof encountered at `key`
  ┌─ eof:1:6
  │
1 │ key =
  │      ^
